<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSuka"
            style="?attr/borderlessButtonStyle"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/icons8_love_96px"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/detailRating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@+id/detailRating"
            app:layout_constraintVertical_bias="0.8"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/background_poster"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:contentDescription="Background Poster"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/poster_aquaman" />

        <ImageView
            android:id="@+id/detailPoster"
            android:layout_width="132dp"
            android:layout_height="198dp"
            android:layout_marginTop="220dp"
            android:contentDescription="Poster Utama"
            app:layout_constraintCircleRadius="?attr/dialogCornerRadius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.057"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/background_poster"
            app:srcCompat="@drawable/poster_aquaman" />

        <TextView
            android:id="@+id/detailJudul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="Aquaman"
            android:textColor="@color/tulisanPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/detailPoster"
            app:layout_constraintTop_toBottomOf="@+id/background_poster" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tahun_rilis"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/detailPoster"
            app:layout_constraintTop_toBottomOf="@+id/detailJudul" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/sinopsis"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailRatingText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/genre"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/detailPoster"
            app:layout_constraintTop_toBottomOf="@+id/detailRilis" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/durasi"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/detailPoster"
            app:layout_constraintTop_toBottomOf="@+id/detailGenre" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/sutradara"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/detailPoster"
            app:layout_constraintTop_toBottomOf="@+id/detailDurasi" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/golongan"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/detailPoster"
            app:layout_constraintTop_toBottomOf="@+id/detailSutradara" />

        <TextView
            android:id="@+id/detailRilis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="2018"
            android:textColor="@color/tulisanPrimary"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/detailGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/aquaman_genre"
            android:textColor="@color/tulisanPrimary"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/detailRilis" />

        <TextView
            android:id="@+id/detailDurasi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/aquaman_durasi"
            android:textColor="@color/tulisanPrimary"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/detailGenre" />

        <TextView
            android:id="@+id/detailSutradara"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="Robert"
            android:textColor="@color/tulisanPrimary"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/detailDurasi" />

        <TextView
            android:id="@+id/detailGolongan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="TextView"
            android:textColor="@color/tulisanPrimary"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/detailSutradara" />

        <RatingBar
            android:id="@+id/detailRating"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:numStars="5"
            android:progressTint="@android:color/holo_orange_light"
            android:rating="4"
            app:layout_constraintStart_toEndOf="@+id/detailRatingText"
            app:layout_constraintTop_toTopOf="@+id/detailRatingText" />

        <TextView
            android:id="@+id/detailRatingText"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="4.2"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toEndOf="@+id/detailRating"
            app:layout_constraintTop_toTopOf="@+id/detailRating" />

        <TextView
            android:id="@+id/detailSinopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/aquaman_sinopsis"
            android:textColor="@color/tulisanPrimary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/detailRating"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:layout_editor_absoluteX="1dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/detailRating"
            tools:layout_editor_absoluteX="1dp" />

        <TextView
            android:id="@+id/tv_status_suka"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/suka"
            android:textColor="@color/tulisanPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnSuka"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnSuka"
            app:layout_constraintTop_toTopOf="@+id/btnSuka" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/referensi_lain"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailSinopsis" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fillViewport="false"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="MissingConstraints">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReferensiLain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:padding="5dp" />

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>